--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,7 +1,89 @@
-.principal {
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   font-family: 'Raleway', sans-serif;
+ }
+
+ body {
+    width: 100%;
+    min-height: 100vh;
+ }
+
+ header {
+    padding: 32px 10%;
+    margin-inline: auto;
     display: flex;
+    align-items: center;
+    flex-direction: row;
+ }
+
+ .logo {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+
+ }
+ 
+ .logo-texto {
+    margin-left: 5px;
+    font-size: 20px;
+ }
+
+ .logo-texto span {
+    color: #2A7AE4;
+ }
+
+ .input-wrapper {
+    position: relative;
+    display: flex;
+    max-width: 550px;
+    min-width: 272px;
+    flex: 1;
+ }
+
+ .input-busca {
+    height: 40px;
+    flex: 1;
+    margin-left: 32px;
+    padding: 8px 16px;
+    border-radius: 20px;
+    outline: none;
+    border: none;
+    background-color: #F5F5F5;
+    font-size: 14px;
+    line-height: 16px;
+    color: #A2A2A2;
+ }
+
+ .search-icon {
+    background-image: url('../imgs/search-icon.png');
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
+    right: 15px;
+    top: 11px;
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    cursor: pointer;
+ }
+
+ .btn1 {
+    padding: 16px;
+    border: 1px solid #2A7AE4;
+    display: flex;
+    justify-content: center;
+    color: #2A7AE4;
+    cursor: pointer;
+ }
+
+ .btn1:hover {
+    background-color: #D4E4FA;;
+ }
+
+ #btn-login {
+    margin-left: auto;
+    max-width: 182px;
+    flex: 1;
+    font-size: 14px;
+ }
