--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -12,84 +12,6 @@ body {
    overflow-x: hidden;
 }
 
-header {
-   padding: 32px 10%;
-   margin-inline: auto;
-   display: flex;
-   align-items: center;
-   flex-direction: row;
-}
-
-.logo {
-   display: flex;
-   align-items: center;
-   cursor: pointer;
-
-}
-
-.logo-texto {
-   margin-left: 5px;
-   font-size: 24px;
-}
-
-.logo-texto span {
-   color: #2A7AE4;
-}
-
-.input-wrapper {
-   position: relative;
-   display: flex;
-   max-width: 450px;
-   min-width: 272px;
-   flex: 1;
-   margin-right: 30px;
-}
-
-.input-busca {
-   height: 40px;
-   flex: 1;
-   margin-left: 32px;
-   padding: 8px 16px;
-   border-radius: 20px;
-   outline: none;
-   border: none;
-   background-color: #F5F5F5;
-   font-size: 14px;
-   line-height: 16px;
-   color: #A2A2A2;
-}
-
-.search-icon {
-   background-image: url('../imgs/search-icon.png');
-   position: absolute;
-   right: 15px;
-   top: 11px;
-   display: inline-block;
-   width: 18px;
-   height: 18px;
-   cursor: pointer;
-}
-
-.btn1 {
-   padding: 16px;
-   border: 1px solid #2A7AE4;
-   display: flex;
-   justify-content: center;
-   color: #2A7AE4;
-   cursor: pointer;
-   font-size: 14px;
-}
-
-.btn1:hover {
-   background-color: #D4E4FA;
-   ;
-}
-
-#btn-login {
-   margin-left: auto;
-   width: 182px;
-}
-
 .banner-hero {
    display: flex;
    flex-direction: column;
@@ -206,98 +128,6 @@ header {
    font-size: 16px;
 }
 
-.rodape {
-   padding: 64px 10%;
-   background-color: #EAF2FD;
-   display: grid;
-   grid-template-columns: 1fr 1fr 2fr;
-}
-
-.rodape .logo {
-   align-self: flex-start;
-}
-
-.rodape-navegacao {
-   display: flex;
-   flex-direction: column;
-}
-
-.rodape-navegacao ul li {
-   list-style-type: none;
-   margin-bottom: 24px;
-}
-
-.rodape-navegacao ul li a {
-   text-decoration: none;
-   color: #464646;
-   font-size: 16px;
-}
-
-.rodape-contato {
-   display: flex;
-   flex-direction: column;
-   flex: 1;
-   gap: 8px;
-}
-
-.rodape-contato h3 {
-   font-size: 16px;
-}
-
-.input-wrapper2,
-.input-wrapper3 {
-   position: relative;
-   width: 100%;
-   display: flex;
-}
-
-.input-wrapper2 label {
-   position: absolute;
-   top: 8px;
-   left: 12px;
-   font-size: 12px;
-   color: #A2A2A2;
-}
-
-.input-wrapper2 input {
-   width: 100%;
-   border: none;
-   outline: none;
-   margin-bottom: 8px;
-   height: 56px;
-   padding: 28px 12px 8px 12px;
-   border-radius: 4px;
-   font-size: 16px;
-   box-shadow: 0px 1px 1px #C8C8C8;
-   ;
-}
-
-.input-wrapper3 label {
-   position: absolute;
-}
-
-.input-wrapper3 input {
-   width: 100%;
-   border: none;
-   outline: none;
-   height: 82px;
-   padding: 8px 12px 8px 12px;
-   border-radius: 4px;
-   font-size: 14px;
-   box-shadow: 0px 1px 1px #C8C8C8;
-   align-self: flex-start;
-}
-
-.creditos {
-   display: flex;
-   justify-content: center;
-   padding: 32px;
-}
-
-.creditos i {
-   margin-left: 10px;
-}
-
 @media (max-width: 1280px) {
    .card-wrapper {
       width: 18%;
@@ -309,19 +139,8 @@ header {
       width: 23%;
    }
 
-   header,
    .banner-hero {
       padding: 32px 5%;
-   }
-
-   .logotipo {
-      width: 23px;
-      height: 17px;
-   }
-
-   .logo-texto {
-      margin-left: 2px;
-      font-size: 14px;
    }
 
    .categoria-header h3 {
@@ -329,8 +148,7 @@ header {
       line-height: 26px;
    }
 
-   .container-principal,
-   .rodape, {
+   .container-principal {
       padding: 64px 5%;
    }
 }
@@ -342,13 +160,8 @@ header {
       gap: 32px;
    }
 
-   header,
    .banner-hero {
       padding: 16px 5%;
-   }
-
-   .logo-texto span {
-      color: #2A7AE4;
    }
 
    .banner-hero {
@@ -378,79 +191,8 @@ header {
       max-width: 200px;
    }
 
-   header {
-      justify-content: space-between;
-   }
-
-   .logo {
-      order: 1;
-   }
-
-   .input-wrapper {
-      order: 3;
-      min-width: auto;
-      flex: 0;
-      position: inherit;
-   }
-
-   .input-busca {
-      display: none;
-
-   }
-
-   .search-icon {
-      position: inherit;
-      top: auto;
-      left: auto;
-      background-image: url('../imgs/search-icon2.png');
-      background-size: cover;
-      display: inline-block;
-      align-self: center;
-   }
-
-   .btn1,
    .btn2 {
       padding: 12px;
    }
 
-   #btn-login {
-      order: 2;
-      width: 133px;
-      margin: 0;
-   }
-
-   .rodape {
-      padding: 16px 5%;
-      display: flex;
-      gap: 32px;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-   }
-
-   .rodape .logo {
-      order: unset;
-      display: flex;
-      align-self: auto;
-      justify-content: center;
-      margin-top: 16px;
-   }
-
-   .rodape .logotipo {
-      width: initial;
-      height: initial;
-   }
-
-   .rodape .logo-texto {
-      margin-left: 5px;
-      font-size: 24px;
-   }
-
-   .rodape-navegacao {
-      text-align: center;
-   }
-   
-   .rodape-contato {
-      width: 100%;
-   }
 }
